samples/_failures_safe/1761322496_222781_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce2f5141.c: In function ‘main’:
./samples/SAFE/__tmp_ce2f5141.c:150:9: error: expected ‘,’ or ‘;’ at end of input
  150 |         for (int i = 0
      |         ^~~
./samples/SAFE/__tmp_ce2f5141.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce2f5141.c:150:9: error: expected declaration or statement at end of input
